--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "next": "13.4.7",
+    "next": "13.4.8-canary.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.3",
     "typescript": "5.1.3"
   }
 }
